<resources>
    <string name="app_name">AndroidTemplate</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start-Up Name</string>
    <string name="info">Lorem ipsum</string>
    <string name="title_activity_login">Login</string>
    <string name="editText1">Email</string>
    <string name="editText2">Password</string>
    <string name="text1">Forgot your password?</string>
    <string name="text2">Don\'t have an account yet</string>
    <string name="text3">Create Account</string>
    <string name="text4">Login</string>
    <string name="text5">facebook</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tab1">Tab1</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="title_activity_tab3">Tab3</string>



</resources>

