<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/city"
    tools:context="com.example.android.androidtemplate.Login">


    <TextView
        android:id="@+id/textView"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:clickable="true"
        android:typeface="sans"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />


    <EditText
        android:layout_width="fill_parent"

        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/editText1"
        android:textColorHint="#3f616a"
        android:selectAllOnFocus="true"
        android:textStyle="bold"
        android:typeface="sans"
        android:background="@drawable/round_corner_selector"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginTop="24dp" />
    <EditText
        android:layout_width="fill_parent"

        android:layout_height="50dp"
        android:inputType="textPassword"
        android:typeface="sans"
        android:ems="10"
        android:id="@+id/editText1"
        android:hint="@string/editText2"
        android:background="@drawable/round_corner_selector"
        android:textColorHint="#3f616a"
        android:textStyle="bold"
        android:selectAllOnFocus="true"

        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text5"
        android:typeface="sans"
        android:id="@+id/button2"
        android:background="#3b5998"
        android:textColor="#F8F8F8"
        android:textStyle="bold"
        android:textColorHint="#F8F8F8"
        android:layout_alignTop="@+id/button"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text4"
        android:typeface="sans"
        android:id="@+id/button"
        android:background="#3f616a"
        android:textColor="#F8F8F8"
        android:textStyle="bold"
        android:textColorHint="#F8F8F8"
        android:layout_below="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_marginTop="36dp"
        android:layout_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/text1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:clickable="true"
        android:typeface="sans"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <TextView
        android:id="@+id/textView3"
        android:text="@string/text2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:clickable="true"
        android:typeface="sans"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/text3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColorHint="#FFFFFF"
        android:textColor="#3f616a"
        android:textStyle="bold"
        android:clickable="true"
        android:typeface="sans"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
